Initialise commit - create the plugin and test skeleton

--- a/docs/configuration.mkd
+++ b/docs/configuration.mkd
@@ -33,7 +33,7 @@ _Configuration keys for the `DXR` section of the configuration file._
                         (default `<dxrroot>/templates/mozilla`)
  - `wwwroot`            Virtual root on deployment server (default `/`)
  - `enabled_plugins`    Enabled plugins (default `*`)
- - `disabled_plugins`   Disabled plugins (default ` `)
+ - `disabled_plugins`   Disabled plugins (default `rust`)
  - `directory_index`    Filename for directory index files
                         (default `.dxr-directory-index.html`)
  - `generated_date`     In RFC-822 format, also know as (RFC 2822),
