multiple and external crates

--- a/dxr/plugins/rust/README.mkd
+++ b/dxr/plugins/rust/README.mkd
@@ -15,36 +15,33 @@ hack the compiler to output dxr csvs and make it more generic later...
 TODO
 ----
 
-scopes so we can query items in a module, class etc.
+REBASE
 
-multiple crates
+scopes so we can query items in a module, class etc.
 
 sort out the rhs bar
 
 rename dxr -> dump ...
 
-jump to stdlib index somewhere for stdlib etc. refs. (maybe this will come out in the wash; doubt it)
-  jump to docs or source, maybe
-
-effects of functions (purity etc.)
-  other static analysis type info from the compiler
+methods - check static method with specialisation
+check extern mod github link
 
 
 bugs
 ----
 
+need to escape quotes in values
+
 text search - case sensitivity bug - the 'i' in the search query screws things up
   update libtrilite
 
-default directory should not use ~
+use aliases have module, not file, scope
+
+need to take into account the path attribute when looking up modules (because attributes can screw up the names)
+
 
 items
 -----
-
-methods - check static method with specialisation
-
-multiple crates
-  extern mod
 
 type param defs + refs
 lifetime param defs + refs
